# nem

./: .gitignore  CLAUDE.md  CODEOWNERS  Makefile  README.md  spec-int-work.md  work_history.md  work_instructions.md
.claude/rules/: binder.md  compiler.md  conformance.md  examples.md  interpreter.md  libs.md  simulator.md
.github/: pull_request_template.md
docs/architecture/: common-infrastructure.md  compiler-pipeline.md  domain-specific-framework-analysis.md  runtime-model.md  system-overview.md
docs/contracts/: README.md  opcode-registry.md
docs/engineering/: README.md  general-dev-process.md  github-process.md  principles.md  spec-int-dev-process.md  tool-dev-process.md
docs/ext/: README.md  npm.md
docs/workflow/: README.md
examples/: conv2d_maxpool.nem  conv2d_relu.nem  gemm_bias_relu.nem  gemm_rmsnorm.nem  npm_baseline_1.0.nem  npm_lite_.nem
libs/: CLAUDE.md  README.md  work.md
libs/nemlib/: pyproject.toml
libs/nemlib-py/: pyproject.toml
libs/nemlib-py/nemlib/core/: __init__.py  decorators.py  elements.py
libs/nemlib-py/nemlib/diagnostics/: severity.py
libs/nemlib-py/nemlib/parser/: lexer.py  tokens.py
libs/nemlib-py/tests/: __init__.py  test_diagnostics.py  test_elements.py  test_lexer.py  test_parser.py
plan/phase_1/: infra.md  integration.md  interpreter.md  (+3 more)
spec/: CHANGELOG.md  comparison_tables.md  examples.md  generate-pdfs.sh  nem_spec.md  nem_whitepaper.md
tools/: tools_instructions.md
tools/interpreter/: CLAUDE.md  interpreter_spec.md  pyproject.toml  work.md  work_history.md
tools/interpreter/neminterp/: __init__.py
tools/interpreter/tests/: test_init.py
(+64 files in other folders)
