[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemlib"
version = "0.1.0"
description = "NEM shared library: parser, AST, type system, diagnostics"
requires-python = ">=3.10"
authors = [{name = "NEM Team"}]

# ZERO runtime dependencies — pure Python
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
nemlib = ["py.typed"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
